<resources>
    <string name="app_name">My ApplicationB1203288</string>
    <string name="foods">foods</string>
    <string name="collection">collection</string>
    <string name="shilin_night_market">shilin night market</string>
    <string name="hot">HOT</string>
    <string name="chat">chat</string>
    <string name="favorite">favorite</string>
    <string name="discover">discover</string>
    <string name="point">point</string>
    <string name="settings">settings</string>
    <string name="sausage">sausage</string>
    <string name="rice">rice</string>
    <string name="rices">rices</string>
    <string name="noodle">noodle</string>
    <string name="noodles">noodles</string>
    <string name="barbecue">barbecue</string>
    <string name="babecues">babecues</string>
    <string name="barbecues">barbecues</string>
    <string name="drink">drink</string>
    <string name="drinks">drinks</string>
    <string name="dot">dot</string>
    <string name="back">back</string>
    <string name="like_store">like store</string>
    <string name="really_interesting">really interesting</string>
    <string name="hofhghvi3156shilin_taipei">HOFHGHVI3156shilin-taipei</string>
    <string name="_0_200">$0-200</string>
    <string name="star">star</string>
    <string name="shilin_breadman">shilin-breadman</string>
    <string name="cp_up">CP up</string>
    <string name="hofhghvi3156shilintaipei">HOFHGHVI3156shilin-taipei</string>
    <string name="_0_2000">$0-200</string>
    <string name="stars">stars</string>
    <string name="shilin_big_sausage">shilin big sausage</string>
    <string name="cpup">CP up</string>
    <string name="hofhghvi3156shilintaipeii">HOFHGHVI3156shilin-taipei</string>
    <string name="_0_20000">$0-200</string>
    <string name="starss">starss</string>
    <string name="nav_chat">nav chat</string>
    <string name="nav_favorite">nav favorite</string>
    <string name="nav_discover">nav discover</string>
    <string name="nav_points">nav points</string>
    <string name="nav_settings">nav settings</string>
    <string name="favoritestore">favoritestore</string>
    <string name="back2">返回</string>
    <string name="setting">設定</string>
</resources>